# rainy-mate

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FEATURES.md  LEGAL_COMPLIANCE.md  RAINY_MATE.md  RAINY_OPENCLAW.md  README.md  ROADMAP.md  RUST_CODE_AUDIT_REPORT.md  components.json.bak  fix.py  fix.sh  fix2.sh  fix3.sh  fix4.sh  fix_final.py  fix_manager.py  fix_modal.py  fix_modal.sh  fix_real_final.py  fix_test.py  index.html  opencode.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.artifacts/badges/: README-badge-snippet.md
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/: RainyAutoLaunch.swift  RainyNativeNotifications.swift  RainyNativeShell.swift  RainyQuickDelegate.swift
src-tauri/migrations/: 20260208232500_add_agent_spec_json.sql  20260220120000_memory_vault_embedding_3072.sql  20260311113000_add_chat_compaction_state.sql  20260311130000_add_chat_runtime_telemetry.sql  20260318000000_add_chat_workspace_id.sql  20260320000000_add_chat_source_metadata.sql  20260326091500_add_airlock_messages.sql  20260329093000_add_message_artifacts.sql  20260329113000_expand_chat_runtime_telemetry.sql  20260329114500_add_chat_usage_columns.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agents/: agent_trait.rs  base_agent.rs  critic.rs  message_bus.rs  mod.rs  registry.md  registry.rs  status_monitoring.rs  task_management.rs  types.rs
src-tauri/src/ai/: gemini.rs  keychain.rs  mod.rs  mode_selector.rs  model_catalog.rs  provider.rs  provider_registry.rs  provider_trait.rs  provider_types.rs
src-tauri/src/ai/agent/: act_step.rs  chat_sessions.rs  context_budget.rs  context_window.rs  error.rs  events.rs  hierarchical_supervisor.rs  manager.rs  memory.rs  mod.rs  prompt_guard.rs  protocol.rs  runtime.rs  runtime_events.rs  runtime_registry.rs  specialist.rs  supervisor.rs  verification_test.rs  workflow.rs
src-tauri/src/ai/features/: embeddings.rs  mod.rs  security_service.rs  streaming.rs  usage_analytics.rs  web_search.rs
src-tauri/src/ai/providers/: anthropic.rs  gemini_adapter.rs  mod.rs  moonshot.rs  openai.rs  rainy_sdk.rs  xai.rs
src-tauri/src/ai/router/: capability_matcher.rs  circuit_breaker.rs  cost_optimizer.rs  fallback_chain.rs  load_balancer.rs  mod.rs  router.rs
src-tauri/src/ai/specs/: manifest.rs  mod.rs  security.rs  skills.rs
src-tauri/src/commands/: agent.rs  agent_builder.rs  agent_frontend_events.rs  agents.rs  ai.rs  ai_providers.rs  airlock.rs  atm.rs  beam.rs  chat_artifacts.rs  deployment.rs  external_agents.rs  file.rs  file_ops.rs  folder.rs  mcp.rs  memory.rs  mod.rs  native_shell.rs  neural.rs  quick_delegate.rs  reflection.rs  research.rs  router.rs  settings.rs  skills.rs  task.rs  unified_models.rs  workflow_factory.rs  workspace.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: folder.rs  mod.rs  neural.rs
src-tauri/src/services/: agent_kill_switch.rs  agent_library.rs  ai_agent.rs  airlock.rs  airlock_messages.rs  app_identity.rs  atm_auth.rs  atm_client.rs  attachment.rs  audit_emitter.rs  beam_rpc.rs  beam_templates.rs  browser_controller.rs  chat_artifacts.rs  cloud_bridge.rs  command_poller.rs  command_poller_agent.rs  default_agent_spec.rs  embedder.rs  file_manager.rs  file_operations.rs  fleet_control.rs  folder_manager.rs  keychain_access.rs  llm_client.rs  local_agent_security.rs  macos_auto_launch.rs  macos_native_notifications.rs  macos_native_shell.rs  macos_quick_delegate.rs  managed_research.rs  manifest_signing.rs  mate_launchpad.rs  mcp_client.rs  mcp_http.rs  mcp_service.rs  mod.rs  native_shell.rs  neural_service.rs  persistent_scheduler.rs  (+16 more)
src-tauri/src/services/external_agent_runtime/: mod.rs  models.rs
src-tauri/src/services/memory/: crystalline.rs  long_term.rs  mod.rs  (+3 more)
src-tauri/src/test/: test_cowork_api.rs
(+233 files in other folders)
