[package]
name = "rainy-cowork"
version = "0.4.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rainy_cowork_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-notification = "2.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json", "stream"] }
async-trait = "0.1.89"
rainy-sdk = { version = "0.6.1", features = ["rate-limiting", "tracing", "cowork"] }
dashmap = "6.1.0"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.17"
futures = "0.3.31"
security-framework = "3.5.1"
tracing = "0.1.44"
env_logger = "0.11"
# Web Research (Phase 3)
scraper = "0.23"
url = "2.5"
regex = "1.11"
# Document Generation (Phase 3)
handlebars = "6"
# Image Processing (Phase 3)
image = "0.25"
kamadak-exif = "0.5"
base64 = "0.22"
# File Operations (AI Agent)
tempfile = "3.16"
rayon = "1.10"
dirs = "5.0"
toml = "0.9.11"
md5 = "0.8.0"
